// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-entity-info-tab Renders \`service-entity-info-tab\` with custom props 1`] = `
<div>
  <div
    class="layout pa-2 align-center wrap"
  >
    <div>
      Actions:
    </div>
    <service-entity-actions-stub
      actions="[object Object]"
      assignedinstructions="[object Object]"
      entity="[object Object]"
    />
  </div>
  <service-entity-template-stub
    entity="[object Object]"
    template="<div>Template</div>"
  />
</div>
`;

exports[`service-entity-info-tab Renders \`service-entity-info-tab\` with default props 1`] = `
<div>
  <!---->
  <service-entity-template-stub
    entity="[object Object]"
    template=""
  />
</div>
`;
